--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "know-parser",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A simple, plugin-based parser for text",
+  "repository": {
+    "type": "git",
+    "url": "git://gitlab.com/georgehm/know-parser.git"
+  },
   "main": "main.js",
   "scripts": {
     "test": "jest ./tests"
@@ -18,6 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "axios": "^0.19.0",
+    "jest": "^24.9.0",
     "jshint": "^2.10.2"
   }
 }
