--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "./src/knowParser.js",
   "scripts": {
-    "test": "jshint ./src && jest ./__tests__/*.test.js"
+    "test": "jshint ./src && jest --verbose ./__tests__/*.test.js"
   },
   "keywords": [
     "data",
