--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "author": "George Meadows",
   "license": "MIT",
   "dependencies": {
-    "parse-domain": "^2.3.2"
+    "parse-domain": "^2.3.2",
+    "phoneformat.js": "^1.0.8"
   },
   "devDependencies": {
     "axios": "^0.19.0",
