--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   "author": "George Meadows",
   "license": "MIT",
   "dependencies": {
-    "parse-domain": "^2.3.2",
-    "phoneformat.js": "^1.0.8"
+    "parse-domain": "^2.3.2"
   },
   "devDependencies": {
     "axios": "^0.19.0",
