--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "url": "https://github.com/george-hm/know-parser/issues",
     "email": "georgehm@pm.me"
   },
-  "homepage": "https://github.com/george-hm/know-parser/"
+  "homepage": "https://github.com/george-hm/know-parser/",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  }
 }
